--- a/css/master.css
+++ b/css/master.css
@@ -20,8 +20,17 @@ p {
 nav {
     height: 100px !important;
     background: #e3e3e3;
-    -webkit-box-shadow: 0 0 4px 0 #000000;
-    box-shadow: 0 0 4px 0 #000000;
+    transition: height 0.5s ease;
+    -webkit-transition: height 0.5s ease;
+    -moz-transition: height 0.5s ease;
+    -o-transition: height 0.5s ease;
+}
+.shrink {
+    height: 80px !important;
+    -webkit-box-shadow: 0 0 4px 0 #000000 !important;
+    -moz-box-shadow: 0 0 4px 0 #000000 !important;
+    box-shadow: 0 0 4px 0 #000000 !important;
+    background: #fff !important;
 }
 .logo img {
     width: 110px !important;
