--- a/css/master.css
+++ b/css/master.css
@@ -11,6 +11,9 @@
     margin-top: 100px !important;
     margin-bottom: 100px !important;
 }
+.nav-fix {
+    padding-top: 100px;
+}
 p {
     font-size: 18px;
     font-weight: 300;
@@ -50,10 +53,10 @@ div.right.menu > div.ui.dropdown.item:hover, .ui.secondary.menu a.item:hover,  n
 .ui.menu.fixed, .ui.menu.fixed .item:first-child, .ui.menu.fixed .item:last-child {
     border-radius: .28571429rem !important;
 }
-/*===========Header==========
+/*===========Header Slider==========
 ====================================*/
 header {
-    padding-top: 100px;
+
 }
 .caption{
     position: absolute;
@@ -68,6 +71,7 @@ header {
 .header-carousel .item img{
   width: 100%;
   height: 400px;
+  border: 10px solid #e3e3e3;
 }
 .caption .animated  {
   -webkit-animation-duration : 3s  ;
@@ -82,16 +86,14 @@ header {
   animation-delay : 0ms  ;
 }
 
-h4 {
+.caption h4 {
   font-size: 28px;
 
 }
 
-p {
+.caption p {
 
 }
-
-
 
 /*===========Vision==========
 ====================================*/
